tests/fixtures/typecheck/invalid/bad_boolean_operand.sr
rule "EQ: Bad Bool Operand" in underlying:
    when data.is_fresh and bar.close:
        then emit_signal(kind="X", reason="bad_and")
